# SMGP-2021

./: .gitignore  README.md
assignment6/: CMakeLists.txt  README.md
assignment6/data/face_template/: headtemplate_landmarks.txt  headtemplate_large_landmarks.txt  headtemplate_noneck_landmarks.txt  headtemplate_noneck_lesshead_4k_landmarks.txt  template_rigid_aligned_scaled_landmarks.txt
assignment6/data/vae_faces/eval/: ali_neutral_corrected_preprocessed_aligned_features.txt  ali_smile_corrected_preprocessed_aligned_features.txt  chrisk_neutral2_preprocessed_aligned_features.txt  chrisk_neutral_preprocessed_aligned_features.txt  chrisk_smile_preprocessed_aligned_features.txt  daniel_normal_preprocessed_aligned_features.txt  daniel_smile_preprocessed_aligned_features.txt  selina-brille_preprocessed_aligned_features.txt  selina-neutral_preprocessed_aligned_features.txt  selina-smile_preprocessed_aligned_features.txt
assignment6/data/vae_faces/model/: dec1_bias.txt  dec1_weight.txt  dec2_bias.txt  dec2_weight.txt  dec3_bias.txt  enc1_bias.txt  enc2_bias.txt  enc2_weight.txt  enc_mu_bias.txt  enc_mu_weight.txt  enc_var_bias.txt  enc_var_weight.txt
assignment6/data/vae_faces/train/: alain_normal_preprocessed_aligned_features.txt  alain_smile_preprocessed_aligned_features.txt  alex neutral_preprocessed_aligned_features.txt  alex smile_preprocessed_aligned_features.txt  (+98 more)
assignment6/src/: FaceRegistor.cpp  FaceRegistor.h  LandmarkSelector.cpp  LandmarkSelector.h  PCA.cpp  PCA.h  Preprocessor.cpp  Preprocessor.h  VAE.cpp  VAE.h  main.cpp
